* IE7 fix for overflow of content from the report box container - list/map view toggle still broken in IE7

--- a/media/css/ie7hacks.css
+++ b/media/css/ie7hacks.css
@@ -26,12 +26,10 @@ div.search-form input.searchbtn{
     line-height: 7px;
 }
 
-#filters-box {
-	width: 270px !important;
-}
-
 .link-toggle li { 
 	float: left; 
 	display: inline-block; 
 	padding: 6px 0;
 }
+
+.rb_report { position: static !important; }
